# cite

./: .ltex-ls-plus.json  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  debug_test.rs  flake.nix  test_new_syntax.rs
.cite/cache/: http_https___example_com_full  http_https___example_com_regex_title  http_https___httpbin_org_get_full  http_https___jsonplaceholder_typicode_com_todos_1_full
cite/: README.md
cite/cache/: Cargo.toml
cite/cache/src/: lib.rs
cite/cite/: Cargo.toml
cite/cite/src/: annotation.rs  documentation.rs  extraction.rs  git.rs  http.rs  level.rs  lib.rs  mock.rs  prevalidation.rs  sources.rs  validation.rs
cite/cite/src/documentation/: footnotes.rs  formatting.rs  sources.rs
cite/cite/src/extraction/: above.rs
cite/cite/src/git/: macro_syntax.rs
cite/cite/src/http/: macro_syntax.rs
cite/cite/src/mock/: macro_syntax.rs  struct_syntax.rs
cite/cite/src/sources/: git.rs  http.rs  mock.rs
cite/core/: Cargo.toml  README.md
cite/core/src/: behavior.rs  id.rs  lib.rs  macro_ergonomics.rs  mock.rs  ui.rs
cite/core/src/behavior/: annotation.rs  global.rs  level.rs
cite/core/src/mock/: ui.rs
cite/git/: Cargo.toml
cite/git/src/: lib.rs  line_range.rs  repository_manager.rs  ui.rs
cite/http/: Cargo.toml
cite/hypertext/: Cargo.toml
cite/test/: Cargo.toml  README.md
cite/test/src/: lib.rs
cite/test/tests/: annotation_requirement_test.rs  compile_behavior.rs  runtime_behavior_test.rs
cite/test/tests/ui/fail/: changed_content_error.rs  changed_content_error.stderr  http_invalid_syntax.rs  http_invalid_syntax.stderr  invalid_attribute.rs  invalid_attribute.stderr  missing_source.rs  wrong_target.rs  wrong_target.stderr
cite/test/tests/ui/footnote-fail/: missing_reason.rs  missing_reason.stderr
cite/test/tests/ui/footnote-pass/: with_reason.rs
cite/test/tests/ui/global-strict-fail/: local_override_ignored.rs  local_override_ignored.stderr
cite/test/tests/ui/lenient-pass/: local_override_works.rs
cite/test/tests/ui/pass/: basic_citation.rs  behavior_demonstration.rs  changed_content_silent.rs  citation_with_attributes.rs  enum_citation.rs  http_citation.rs  http_fragment_citation.rs  mock_diff_display.rs  module_citation.rs
cite/test/tests/ui/strict-fail/: local_override_ignored.stderr
examples/helper-macro-git/: Cargo.toml
examples/helper-macro-git/src/: lib.rs
syntax_test/: Cargo.toml
syntax_test/src/: main.rs
tests/annotationless/: Cargo.toml
tests/annotationless/tests/: compile_behavior.rs
tests/annotationless/tests/ui/: pass
tests/annotationless/tests/ui/pass-annotationless/: missing_reason.rs
tests/dependencies/: Cargo.toml  README.md
tests/dependencies/src/: lib.rs
tests/dependencies/tests/: dependency_verification.rs
tests/embedded-bin/: Cargo.toml  README.md  memory.x
tests/embedded-bin/.cargo/: config.toml
tests/embedded-bin/src/: lib.rs  main.rs
tests/embedded-bin/tests/: dependency_verification.rs
tests/embedded-lib/: Cargo.toml  README.md
tests/embedded-lib/src/: lib.rs
tests/embedded-lib/tests/: dependency_verification.rs
tests/helper-macro-git/: Cargo.toml  README
tests/helper-macro-git/helper-macro-git/: DOC-4.md  DOC_2.md  DOC_3.md  README.md
tests/helper-macro-git/src/: lib.rs
tests/helper-macro-git/tests/: compile_behavior.rs
tests/helper-macro-git/tests/ui/fail/: doc_2_content_diff.rs  doc_2_content_diff.stderr
tests/helper-macro-git/tests/ui/pass/: doc_1_pass.rs
tests/lenient/: Cargo.toml
tests/lenient/tests/: compile_behavior.rs
tests/lenient/tests/ui/fail-lenient/: content_mismatch_error.rs  content_mismatch_error.stderr  missing_reason_error.rs  missing_reason_error.stderr
tests/lenient/tests/ui/footnote-fail/: missing_reason.stderr
tests/lenient/tests/ui/lenient-pass/: local_override_works.rs
tests/lenient/tests/ui/pass/: citation_with_attributes.rs  mock_diff_display.rs
tests/lenient/tests/ui/pass-lenient/: annotation_overrides.rs  combined_overrides.rs  combined_overrides.warn  edge_cases.rs  level_overrides.rs  level_overrides.warn  missing_reason_warn.rs  missing_reason_warn.warn  module_function_overrides.rs  module_function_overrides.warn  struct_trait_overrides.rs  struct_trait_overrides.warn
tests/no-std/: Cargo.toml  README.md
tests/no-std-bin/: Cargo.toml  README.md
tests/no-std-bin/src/: lib.rs  main.rs
tests/no-std-bin/tests/: dependency_verification.rs
tests/no-std/src/: lib.rs
tests/no-std/tests/: dependency_verification.rs
tests/test/: Cargo.toml
tests/test/src/: lib.rs
tests/test/tests/: compile_behavior.rs  runtime_behavior_test.rs
tests/test/tests/ui/fail-invalid/: changed_content_error.stderr  changed_content_error.warn  changed_git_content.rs  changed_git_content.stderr  changed_git_content.warn  local_override_ignored.stderr  local_override_ignored.warn  missing_reason.rs  missing_reason.stderr  missing_reason.warn
tests/test/tests/ui/fail-syntax/: http_invalid_syntax.rs  http_invalid_syntax.stderr  invalid_attribute.rs  invalid_attribute.stderr  missing_source.stderr  wrong_target.rs  wrong_target.stderr
tests/test/tests/ui/pass/: basic_citation.rs  basic_citation.warn  enum_citation.rs  git_citation.rs  module_citation.rs
tests/warn/: Cargo.toml
tests/warn/src/: lib.rs
tests/warn/tests/: compile_behavior.rs
util/cite/core/: Cargo.toml
util/cite/core/src/: behavior.rs  cache.rs  hypertext.rs  id.rs  lib.rs  mock.rs  traits.rs
util/cite/core/src/behavior/: annotation.rs  global.rs  level.rs
util/cite/macro/: Cargo.toml
util/cite/macro/src/: lib.rs  mock.rs
util/cite/macro/src/mock/: macro_syntax.rs  struct_syntax.rs
util/cite/test/: Cargo.toml
util/cite/test/src/: lib.rs
util/cite/test/tests/: compile_behavior.rs  runtime_behavior_test.rs
util/cite/test/tests/ui/fail/: changed_content_error.rs  changed_content_error.stderr  invalid_attribute.rs  invalid_attribute.stderr  missing_source.stderr  wrong_target.rs  wrong_target.stderr
util/cite/test/tests/ui/pass/: basic_citation.rs  behavior_demonstration.rs  mock_diff_display.rs
(+32 files in other folders)
