[package]
name = "cite"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true }
cite-core = { workspace = true }
cite-cache = { workspace = true }
cite-http = { workspace = true }
cite-git = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
annotationless = ["cite-core/annotationless"]
warn = ["cite-core/warn"]
silent = ["cite-core/silent"]
lenient = ["cite-core/lenient"]

[lints]
workspace = true