[package]
name = "cite-core"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["level-warn", "annotation-any", "global-lenient"]
level-error = []
level-warn = []
level-silent = []
annotation-footnote = []
annotation-any = []
global-strict = []
global-lenient = []

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true