[package]
name = "cite-core"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = []
annotationless = []
warn = []
silent = []
lenient = []

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true