[package]
name = "cite-git"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cite-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
git2 = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
