[package]
name = "cite-test"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
cite-core = { workspace = true }
cite = { workspace = true }

[features]
level-error = []
level-warn = []
level-silent = []
annotation-footnote = []
annotation-any = []
global-strict = []
global-lenient = []

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true