[package]
name = "cite-annotationless-test"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
cite = { workspace = true, features = ["annotationless"] }

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true