[package]
name = "cite-annotationless-test"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cite = { workspace = true, features = ["annotationless"] }
trybuild = { workspace = true }

[lints]
workspace = true