[package]
name = "dependency-test"
version = "0.1.0"
edition = "2021"

# This test crate should only depend on cite-util-core, not heavy dependencies
[dependencies]
cite-util-core = { path = "../../util/cite/core", default-features = false }

# Test dependencies for verification
[dev-dependencies]
cargo_metadata = "0.19"
serde_json = "1.0"
