[package]
name = "dependency-test"
version = "0.1.0"
edition = "2021"

# This test crate should only depend on cite.
# We should not see dependencies from the macro compile-time trickle up to runtime. 
[dependencies]
cite = { workspace = true }

# Test dependencies for verification
[dev-dependencies]
cargo_metadata = "0.19"
serde_json = "1.0"
