[package]
name = "cite-embedded-bin-test"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cite = { workspace = true }
# Minimal embedded-style dependencies for pattern testing
embedded-hal = "1.0"

[dev-dependencies]
cargo_metadata = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "embedded-firmware"
path = "src/main.rs"
