[package]
name = "cite-embedded-lib-test"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cite = { workspace = true }
# Embedded-specific dependencies
embedded-hal = "1.0"
nb = "1.1"

[dev-dependencies]
cargo_metadata = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
