[package]
name = "cite-helper-macro-git-test"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
cite = { workspace = true, features = ["warn"] }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true