[package]
name = "cite-lenient-test"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dev-dependencies]
cite = { workspace = true, features = ["lenient"] }
trybuild = { workspace = true }

[lints]
workspace = true