[package]
name = "cite-no-std-test"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# This test crate should only depend on cite.
# We should not see dependencies from the macro compile-time trickle up to runtime. 
[dependencies]
cite = { workspace = true }

# Test dependencies for verification
[dev-dependencies]
cargo_metadata = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
