[package]
name = "cite-test"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
cite-core = { workspace = true }
cite = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true