[package]
name = "cite-util-core"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true