[package]
name = "cite-util-macro"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cite-util-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true