[package]
name = "cite-util-test"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
cite-util = { workspace = true }

[dev-dependencies]
trybuild = "1.0"

[lints]
workspace = true